<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:text="@string/category"
           android:textSize="15sp"
           />

       <Spinner
           android:layout_marginTop="5dp"
           android:id="@+id/spinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:text="@string/under_eight"
           android:textSize="25sp"
           android:gravity="center"
           android:textStyle="bold"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="1"
           android:orientation="horizontal"
           >
           <android.support.design.widget.TextInputLayout
               android:layout_weight="0.85"
               android:layout_width="0dp"
               android:layout_height="wrap_content">
           <EditText
               android:id="@+id/editText_first"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="10"
               android:inputType="number"
               android:hint="@string/basic_pay"
               />
           </android.support.design.widget.TextInputLayout>

           <Button
               android:background="@android:color/transparent"
               android:layout_width="0dp"
               android:drawableRight="@drawable/refresh_black_24x24"
               android:layout_height="wrap_content"
               android:layout_weight="0.15"
               android:id="@+id/refresh_one"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           android:layout_marginBottom="6dp"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/dearness_allowance_143"
               />

           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:id="@+id/text_1"
               android:gravity="center"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_marginBottom="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/additional_dearness_allowance"
               />

           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:gravity="center"
               android:id="@+id/text_2"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/special_allowance"

               />

           <TextView
               android:gravity="center"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:id="@+id/text_3"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/additional_allowance"
               />

           <TextView
               android:id="@+id/text_4"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               android:gravity="center"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/interim_relief"
               />

           <TextView
               android:gravity="center"
               android:layout_width="0dp"
               android:id="@+id/text_5"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               />
       </LinearLayout>
       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_marginRight="35dp"
           android:layout_height="wrap_content">
       <EditText
           android:id="@+id/editText_two"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
           android:inputType="number"
           android:hint="@string/handicap_allowance"
           />
       </android.support.design.widget.TextInputLayout>
       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/gross_salary"
               />

           <TextView
               android:id="@+id/text_6"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               android:gravity="center"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/contributory_deduction"
               />

           <TextView
               android:id="@+id/text_7"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               android:gravity="center"
               />
       </LinearLayout>


       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView

               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/net_pay"
               />

           <TextView
               android:gravity="center"
               android:id="@+id/text_8"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               />
       </LinearLayout>

       <View
           android:layout_margin="20dp"
           android:layout_width="wrap_content"
           android:layout_height="2dp"
           android:background="#d3d3d3"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:text="@string/above_eight"
           android:textSize="25sp"
           android:gravity="center"
           android:textStyle="bold"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="1"
           android:orientation="horizontal"
           >

           <android.support.design.widget.TextInputLayout
               android:layout_weight="0.85"
               android:layout_width="0dp"
               android:layout_height="wrap_content">
           <EditText
               android:hint="@string/basic_pay"
               android:id="@+id/editText_three"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="10"
               android:inputType="number"
               />
           </android.support.design.widget.TextInputLayout>
           <Button
               android:background="@android:color/transparent"
               android:layout_width="0dp"
               android:drawableRight="@drawable/refresh_black_24x24"
               android:layout_height="wrap_content"
               android:layout_weight="0.15"
               android:id="@+id/refresh_two"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/grade_pay"
               />

           <TextView
               android:id="@+id/text_9"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               android:gravity="center"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/dearness_allowance_132"
               />

           <TextView
               android:gravity="center"
               android:id="@+id/text_10"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               />
       </LinearLayout>

       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_marginRight="35dp"
           android:layout_height="wrap_content">
       <EditText
           android:id="@+id/editText_four"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
           android:hint="@string/handicap_allowance"
           android:inputType="number"
           />
       </android.support.design.widget.TextInputLayout>
       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/gross_salary"
               />

           <TextView
               android:id="@+id/text_11"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               android:gravity="center"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/contributory_deduction"
               />

           <TextView
               android:gravity="center"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               android:id="@+id/text_12"
               />
       </LinearLayout>


       <LinearLayout
           android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="1"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.7"
               android:text="@string/net_pay"
               />

           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.3"
               android:text="xyz"
               android:id="@+id/text_13"
               android:gravity="center"
               />
       </LinearLayout>


   </LinearLayout>
    </ScrollView>



</LinearLayout>